--- a/package.json
+++ b/package.json
@@ -2,18 +2,29 @@
   "name": "savvy-starter",
   "version": "1.0.0",
   "description": "",
-  "scripts": {},
+  "scripts": {
+    "parcel-build": "parcel build index.html && cp _redirects ./dist/",
+    "serve": "parcel index.html"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "buffer": "^6.0.3",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "node": "^16.13.1",
     "prettier": "1.19.1",
-    "node": "^16.13.1"
+    "process": "^0.11.10"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
+    "html-literal": "^1.1.0",
+    "lodash": "^4.17.21",
+    "navigo": "^8.11.1",
+    "parcel": "^2.13.3",
     "yargs-parser": ">=13.1.2"
   }
 }
